# portfolio_manager

./: .gitignore  README.md  pyproject.toml
src/portfolio_manager/: __main__.py  cli.py  models.py  portfolio.py  vanguard.py
tests/data/: OfxDownload.csv  target_allocations.csv
tests/portfolio_manager/: test_portfolio.py  test_vanguard.py
